# ccv-wxwidgets

./: README.md  index.html  params.json
branches/wxCCV/: Makefile  Makefile.linux  Makefile.mingw32  Makefile.osx  README.txt
branches/wxCCV/res/: Doxyfile  ui_design.fbp
branches/wxCCV/res/data/: config.xml
branches/wxCCV/src/: CCVApp.cpp  CCVFrame.cpp  CCVFrame.h  CCVMainFrame.cpp  CCVMainFrame.h  CCVMiniFrame.cpp  CCVMiniFrame.h  CCVMovidProcess.cpp  CCVMovidProcess.h  CCVbaseFrame.cpp  CCVbaseFrame.h  main.cpp  otMovidStreamModule.h
trunk/: CMakeLists.txt  HowToCompile.txt
trunk/CCV2.0/: CMakeLists.txt  Makefile.linux  Makefile.mingw32  Makefile.osx  README.txt
trunk/CCV2.0/contrib/movid/contrib/ptypes-2.1.1/include/: pport.h
trunk/CCV2.0/contrib/movid/include/: moMovid.h
trunk/CCV2.0/contrib/movid/lib_vs2010/: wosclib.lib
trunk/CCV2.0/contrib/tinyxml/: ofxXmlSettings.cpp  ofxXmlSettings.h
trunk/CCV2.0/lib/movid/lib_vs2010/: fidtrack.lib  ptypes.lib  wosclib.lib
trunk/CCV2.0/makefiles/: Makefile.osx
trunk/CCV2.0/msvc/: CCV2.sln  CCV2.vcxproj  CCV2.vcxproj.filters  build.bat  vld.ini  vld.lib
trunk/CCV2.0/res/: Doxyfile  config.xml  config_linux.xml  ui_design.fbp
trunk/CCV2.0/res/osx/: Info.plist
trunk/CCV2.0/src/: CCVApp.cpp  CCVCommon.h  CCVMainFrame.cpp  CCVMainFrame.h  CCVMiniFrame.cpp  CCVMiniFrame.h  CCVMovidProcess.cpp  CCVMovidProcess.h  CCVProcGraph.cpp  CCVProcGraph.h  CCVUtil.cpp  CCVUtil.h  CCVWorkerEngine.cpp  CCVWorkerEngine.h  CCVbaseFrame.cpp  CCVbaseFrame.h  MovidGraph.cpp  MovidGraph.h  ProcessGraph.cpp  ProcessGraph.h  otMovidStreamModule.cpp  otMovidStreamModule.h
trunk/NUIFrameworks/: CMakeLists.txt
trunk/NUIFrameworks/contrib/.msvc/fidtrack/: fidtrack.vcxproj
trunk/NUIFrameworks/contrib/.msvc/ptypes/: ptypes.vcxproj
trunk/NUIFrameworks/contrib/WOscLib-00.09/: WOscLib.h
trunk/NUIFrameworks/msvc/: Movid.vcxproj  Movid.vcxproj.filters
trunk/NUIFrameworks/src/: moLog.cpp  moLog.h  moOSC.cpp  moPipeline.cpp  movid.cpp
trunk/NUIFrameworks/src/modules/: moCameraModule.cpp  moDoNothingModule.h
trunk/movid/contrib/.msvc/fidtrack/: fidtrack.vcxproj
trunk/movid/contrib/.msvc/ptypes/: ptypes.vcxproj
trunk/movid/msvc/: Movid.vcxproj  Movid.vcxproj.filters  movidApp.vcxproj  movidApp.vcxproj.filters
trunk/movid/src/: moFactory.cpp
trunk/movid/src/modules/: moCameraModule.cpp  moDoNothingModule.cpp  moImageFilterModule.cpp
(+5 files in other folders)
